--- a/HW_15.ipynb
+++ b/HW_15.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:11:38.959888Z",
-     "start_time": "2024-11-24T18:11:38.640846Z"
+     "end_time": "2024-11-24T18:21:49.853179Z",
+     "start_time": "2024-11-24T18:21:49.510760Z"
     }
    },
    "source": [
@@ -23,7 +23,7 @@
     "text = 'The Orbiter Discovery, OV-103, is considered eligible for listing in the National Register of Historic Places (NRHP) in the context of the U.S. Space Shuttle Program (1969-2011) under Criterion A in the areas of Space Exploration and Transportation and under Criterion C in the area of Engineering. Because it has achieved significance within the past fifty years, Criteria Consideration G applies. Under Criterion A, Discovery is significant as the oldest of the three extant orbiter vehicles constructed for the Space Shuttle Program (SSP), the longest running American space program to date; she was the third of five orbiters built by NASA. Unlike the Mercury, Gemini, and Apollo programs, the SSP’s emphasis was on cost effectiveness and reusability, and eventually the construction of a space station. Including her maiden voyage (launched August 30, 1984), Discovery flew to space thirty-nine times, more than any of the other four orbiters; she was also the first orbiter to fly twenty missions. She had the honor of being chosen as the Return to Flight vehicle after both the Challenger and Columbia accidents. Discovery was the first shuttle to fly with the redesigned SRBs, a result of the Challenger accident, and the first shuttle to fly with the Phase II and Block I SSME. Discovery also carried the Hubble Space Telescope to orbit and performed two of the five servicing missions to the observatory. She flew the first and last dedicated Department of Defense (DoD) missions, as well as the first unclassified defense-related mission. In addition, Discovery was vital to the construction of the International Space Station (ISS); she flew thirteen of the thirty-seven total missions flown to the station by a U.S. Space Shuttle. She was the first orbiter to dock to the ISS, and the first to perform an exchange of a resident crew. Under Criterion C, Discovery is significant as a feat of engineering. According to Wayne Hale, a flight director from Johnson Space Center, the Space Shuttle orbiter represents a “huge technological leap from expendable rockets and capsules to a reusable, winged, hypersonic, cargo-carrying spacecraft.” Although her base structure followed a conventional aircraft design, she used advanced materials that both minimized her weight for cargo-carrying purposes and featured low thermal expansion ratios, which provided a stable base for her Thermal Protection System (TPS) materials. The Space Shuttle orbiter also featured the first reusable TPS; all previous spaceflight vehicles had a single-use, ablative heat shield. Other notable engineering achievements of the orbiter included the first reusable orbital propulsion system, and the first two-fault-tolerant Integrated Avionics System. As Hale stated, the Space Shuttle remains “the largest, fastest, winged hypersonic aircraft in history,” having regularly flown at twenty-five times the speed of sound.'\n",
     "\n",
     "nltk.download('stopwords')\n",
-    "nltk.download('punkt_tab')\n",
+    "nltk.download('punkt')\n",
     "\n",
     "doc = nlp(text)\n",
     "tokens = [token.text for token in doc]\n",
@@ -44,19 +44,19 @@
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\4atty\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data] Downloading package punkt to\n",
       "[nltk_data]     C:\\Users\\4atty\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
    ],
-   "execution_count": 52
+   "execution_count": 56
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:11:38.965377Z",
-     "start_time": "2024-11-24T18:11:38.961193Z"
+     "end_time": "2024-11-24T18:21:52.139168Z",
+     "start_time": "2024-11-24T18:21:52.133781Z"
     }
    },
    "cell_type": "code",
@@ -86,13 +86,13 @@
      ]
     }
    ],
-   "execution_count": 53
+   "execution_count": 57
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:11:38.970780Z",
-     "start_time": "2024-11-24T18:11:38.965377Z"
+     "end_time": "2024-11-24T18:21:53.591535Z",
+     "start_time": "2024-11-24T18:21:53.584957Z"
     }
    },
    "cell_type": "code",
@@ -121,13 +121,13 @@
      ]
     }
    ],
-   "execution_count": 54
+   "execution_count": 58
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:11:38.975037Z",
-     "start_time": "2024-11-24T18:11:38.972784Z"
+     "end_time": "2024-11-24T18:22:04.138746Z",
+     "start_time": "2024-11-24T18:22:04.134604Z"
     }
    },
    "cell_type": "code",
@@ -151,7 +151,7 @@
      ]
     }
    ],
-   "execution_count": 55
+   "execution_count": 59
   },
   {
    "metadata": {
