--- a/HW_15.ipynb
+++ b/HW_15.ipynb
@@ -14,7 +14,7 @@
     "from heapq import nlargest\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
+    "from nltk.tokenize import sent_tokenize\n",
     "import spacy \n",
     "import string\n",
     "\n",
