--- a/HW_15.ipynb
+++ b/HW_15.ipynb
@@ -6,15 +6,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:24:11.106943Z",
-     "start_time": "2024-11-24T18:24:10.648182Z"
+     "end_time": "2024-11-24T18:27:31.198910Z",
+     "start_time": "2024-11-24T18:27:30.872123Z"
     }
    },
    "source": [
     "from heapq import nlargest\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import sent_tokenize\n",
+    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
     "import spacy \n",
     "import string\n",
     "\n",
@@ -46,13 +46,13 @@
      ]
     }
    ],
-   "execution_count": 60
+   "execution_count": 68
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:24:11.112234Z",
-     "start_time": "2024-11-24T18:24:11.107948Z"
+     "end_time": "2024-11-24T18:27:31.205935Z",
+     "start_time": "2024-11-24T18:27:31.200915Z"
     }
    },
    "cell_type": "code",
@@ -82,13 +82,13 @@
      ]
     }
    ],
-   "execution_count": 61
+   "execution_count": 69
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:24:11.117163Z",
-     "start_time": "2024-11-24T18:24:11.113238Z"
+     "end_time": "2024-11-24T18:27:31.213100Z",
+     "start_time": "2024-11-24T18:27:31.207142Z"
     }
    },
    "cell_type": "code",
@@ -117,13 +117,13 @@
      ]
     }
    ],
-   "execution_count": 62
+   "execution_count": 70
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:24:11.119991Z",
-     "start_time": "2024-11-24T18:24:11.117163Z"
+     "end_time": "2024-11-24T18:27:31.216150Z",
+     "start_time": "2024-11-24T18:27:31.214103Z"
     }
    },
    "cell_type": "code",
@@ -147,20 +147,20 @@
      ]
     }
    ],
-   "execution_count": 63
+   "execution_count": 71
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:24:11.121850Z",
-     "start_time": "2024-11-24T18:24:11.119991Z"
+     "end_time": "2024-11-24T18:27:31.218593Z",
+     "start_time": "2024-11-24T18:27:31.216150Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "cb7d49308279df31",
    "outputs": [],
-   "execution_count": 63
+   "execution_count": 71
   }
  ],
  "metadata": {
