--- a/HW_15.ipynb
+++ b/HW_15.ipynb
@@ -97,7 +97,7 @@
     "for sent in sentences:\n",
     "    for word in nltk.word_tokenize(sent.lower()):\n",
     "        if word in word_frequencies:\n",
-    "            if len(sent.split(' ')) < 30:  # Фільтр на довжину речень\n",
+    "            if len(sent.split(' ')) < 30: \n",
     "                if sent not in sentence_scores:\n",
     "                    sentence_scores[sent] = word_frequencies[word]\n",
     "                else:\n",
