--- a/HW_15.ipynb
+++ b/HW_15.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:27:31.198910Z",
-     "start_time": "2024-11-24T18:27:30.872123Z"
+     "end_time": "2024-11-24T18:30:21.982677Z",
+     "start_time": "2024-11-24T18:30:21.541029Z"
     }
    },
    "source": [
@@ -46,13 +46,13 @@
      ]
     }
    ],
-   "execution_count": 68
+   "execution_count": 72
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:27:31.205935Z",
-     "start_time": "2024-11-24T18:27:31.200915Z"
+     "end_time": "2024-11-24T18:30:21.988209Z",
+     "start_time": "2024-11-24T18:30:21.983685Z"
     }
    },
    "cell_type": "code",
@@ -82,13 +82,13 @@
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 73
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:27:31.213100Z",
-     "start_time": "2024-11-24T18:27:31.207142Z"
+     "end_time": "2024-11-24T18:30:21.994949Z",
+     "start_time": "2024-11-24T18:30:21.989217Z"
     }
    },
    "cell_type": "code",
@@ -97,7 +97,7 @@
     "for sent in sentences:\n",
     "    for word in nltk.word_tokenize(sent.lower()):\n",
     "        if word in word_frequencies:\n",
-    "            if len(sent.split(' ')) < 30: \n",
+    "            if len(sent.split(' ')) < 40: \n",
     "                if sent not in sentence_scores:\n",
     "                    sentence_scores[sent] = word_frequencies[word]\n",
     "                else:\n",
@@ -113,17 +113,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Other notable engineering achievements of the orbiter included the first reusable orbital propulsion system, and the first two-fault-tolerant Integrated Avionics System.', 'The Space Shuttle orbiter also featured the first reusable TPS; all previous spaceflight vehicles had a single-use, ablative heat shield.', 'She flew the first and last dedicated Department of Defense (DoD) missions, as well as the first unclassified defense-related mission.', 'She was the first orbiter to dock to the ISS, and the first to perform an exchange of a resident crew.', 'As Hale stated, the Space Shuttle remains “the largest, fastest, winged hypersonic aircraft in history,” having regularly flown at twenty-five times the speed of sound.', 'Discovery also carried the Hubble Space Telescope to orbit and performed two of the five servicing missions to the observatory.', 'Unlike the Mercury, Gemini, and Apollo programs, the SSP’s emphasis was on cost effectiveness and reusability, and eventually the construction of a space station.', 'Because it has achieved significance within the past fifty years, Criteria Consideration G applies.', 'She had the honor of being chosen as the Return to Flight vehicle after both the Challenger and Columbia accidents.', 'Under Criterion C, Discovery is significant as a feat of engineering.']\n"
+      "['Including her maiden voyage (launched August 30, 1984), Discovery flew to space thirty-nine times, more than any of the other four orbiters; she was also the first orbiter to fly twenty missions.', 'Other notable engineering achievements of the orbiter included the first reusable orbital propulsion system, and the first two-fault-tolerant Integrated Avionics System.', 'The Space Shuttle orbiter also featured the first reusable TPS; all previous spaceflight vehicles had a single-use, ablative heat shield.', 'Discovery was the first shuttle to fly with the redesigned SRBs, a result of the Challenger accident, and the first shuttle to fly with the Phase II and Block I SSME.', 'She flew the first and last dedicated Department of Defense (DoD) missions, as well as the first unclassified defense-related mission.', 'She was the first orbiter to dock to the ISS, and the first to perform an exchange of a resident crew.', 'In addition, Discovery was vital to the construction of the International Space Station (ISS); she flew thirteen of the thirty-seven total missions flown to the station by a U.S. Space Shuttle.', 'As Hale stated, the Space Shuttle remains “the largest, fastest, winged hypersonic aircraft in history,” having regularly flown at twenty-five times the speed of sound.', 'Discovery also carried the Hubble Space Telescope to orbit and performed two of the five servicing missions to the observatory.', 'Unlike the Mercury, Gemini, and Apollo programs, the SSP’s emphasis was on cost effectiveness and reusability, and eventually the construction of a space station.', 'Because it has achieved significance within the past fifty years, Criteria Consideration G applies.', 'She had the honor of being chosen as the Return to Flight vehicle after both the Challenger and Columbia accidents.', 'Under Criterion C, Discovery is significant as a feat of engineering.']\n"
      ]
     }
    ],
-   "execution_count": 70
+   "execution_count": 74
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:27:31.216150Z",
-     "start_time": "2024-11-24T18:27:31.214103Z"
+     "end_time": "2024-11-24T18:30:21.998619Z",
+     "start_time": "2024-11-24T18:30:21.995957Z"
     }
    },
    "cell_type": "code",
@@ -134,10 +134,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Including her maiden voyage (launched August 30, 1984), Discovery flew to space thirty-nine times, more than any of the other four orbiters; she was also the first orbiter to fly twenty missions.\n",
       "Other notable engineering achievements of the orbiter included the first reusable orbital propulsion system, and the first two-fault-tolerant Integrated Avionics System.\n",
       "The Space Shuttle orbiter also featured the first reusable TPS; all previous spaceflight vehicles had a single-use, ablative heat shield.\n",
+      "Discovery was the first shuttle to fly with the redesigned SRBs, a result of the Challenger accident, and the first shuttle to fly with the Phase II and Block I SSME.\n",
       "She flew the first and last dedicated Department of Defense (DoD) missions, as well as the first unclassified defense-related mission.\n",
       "She was the first orbiter to dock to the ISS, and the first to perform an exchange of a resident crew.\n",
+      "In addition, Discovery was vital to the construction of the International Space Station (ISS); she flew thirteen of the thirty-seven total missions flown to the station by a U.S. Space Shuttle.\n",
       "As Hale stated, the Space Shuttle remains “the largest, fastest, winged hypersonic aircraft in history,” having regularly flown at twenty-five times the speed of sound.\n",
       "Discovery also carried the Hubble Space Telescope to orbit and performed two of the five servicing missions to the observatory.\n",
       "Unlike the Mercury, Gemini, and Apollo programs, the SSP’s emphasis was on cost effectiveness and reusability, and eventually the construction of a space station.\n",
@@ -147,20 +150,20 @@
      ]
     }
    ],
-   "execution_count": 71
+   "execution_count": 75
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-24T18:27:31.218593Z",
-     "start_time": "2024-11-24T18:27:31.216150Z"
+     "end_time": "2024-11-24T18:30:22.001114Z",
+     "start_time": "2024-11-24T18:30:21.998619Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "cb7d49308279df31",
    "outputs": [],
-   "execution_count": 71
+   "execution_count": 75
   }
  ],
  "metadata": {
